--- a/src/app/pages/demo/pages/shared/shared.component.html
+++ b/src/app/pages/demo/pages/shared/shared.component.html
@@ -1,1 +1,17 @@
-<app-button>Test Button</app-button>
+<h2>Form</h2>
+
+<form [formGroup]="form" novalidate autocomplete="off" (ngSubmit)="onSubmit()">
+
+    <app-button (click)="onPatchValue()">Patch Value</app-button>
+    <app-button (click)="onToggleInline()">Toggle Inline</app-button>
+    <br /><br /><br />
+
+    <app-form-field label="Input" [required]="true" [control]="form.controls.input" [isInline]="isInline"
+        [patternError]="regexErrors.numbers">
+        <app-input formControlName="input"></app-input>
+    </app-form-field>
+</form>
+
+<code>
+    {{ form.value | json }}
+</code>
