--- a/src/app/pages/demo/pages/shared/shared.component.html
+++ b/src/app/pages/demo/pages/shared/shared.component.html
@@ -19,6 +19,10 @@
         <app-select formControlName="select" [items]="items"></app-select>
     </app-form-field>
 
+    <app-form-field label="Checkboxes" [required]="true" [control]="form.controls.checkboxes" [isInline]="isInline">
+        <app-checkboxes formControlName="checkboxes" [items]="items"></app-checkboxes>
+    </app-form-field>
+
 </form>
 
 <code>
