--- a/src/app/pages/demo/pages/shared/shared.component.html
+++ b/src/app/pages/demo/pages/shared/shared.component.html
@@ -28,6 +28,11 @@
         </app-radios>
     </app-form-field>
 
+    <app-form-field label="Date" [required]="true" [control]="form.controls.date" [isInline]="isInline">
+        <app-date formControlName="date" placeholder="Date">
+        </app-date>
+    </app-form-field>
+
 </form>
 
 <code>
