[new] date-range

--- a/src/app/pages/demo/pages/shared/shared.component.html
+++ b/src/app/pages/demo/pages/shared/shared.component.html
@@ -33,6 +33,11 @@
         </app-date>
     </app-form-field>
 
+    <app-form-field label="Date Range" [required]="true" [control]="form.controls.dateRange" [isInline]="isInline">
+        <app-date-range formControlName="dateRange">
+        </app-date-range>
+    </app-form-field>
+
 </form>
 
 <code>
