--- a/src/app/pages/demo/pages/shared/shared.component.html
+++ b/src/app/pages/demo/pages/shared/shared.component.html
@@ -2,8 +2,10 @@
 
 <form [formGroup]="form" novalidate autocomplete="off" (ngSubmit)="onSubmit()">
 
+    <app-button type="submit">Submit</app-button>
     <app-button (click)="onPatchValue()">Patch Value</app-button>
     <app-button (click)="onToggleInline()">Toggle Inline</app-button>
+    <app-button (click)="onToggleDisable()">Toggle Disable</app-button>
     <br /><br /><br />
 
     <app-form-field label="Input" [required]="true" [control]="form.controls.input" [isInline]="isInline"
@@ -13,6 +15,10 @@
 
     <app-form-field label="Password" [required]="true" [control]="form.controls.password" [isInline]="isInline">
         <app-password formControlName="password"></app-password>
+    </app-form-field>
+
+    <app-form-field label="Autocomplete" [required]="true" [control]="form.controls.autocomplete" [isInline]="isInline">
+        <app-autocomplete formControlName="autocomplete" [items]="items"></app-autocomplete>
     </app-form-field>
 
     <app-form-field label="Select" [required]="true" [control]="form.controls.select" [isInline]="isInline">
