--- a/src/app/pages/demo/pages/shared/shared.component.html
+++ b/src/app/pages/demo/pages/shared/shared.component.html
@@ -1,51 +1,62 @@
+<h2>Actions</h2>
+
+<app-button (click)="onToggleSpinner()">Toggle Spinner</app-button>
+<app-button (click)="onError()">Error</app-button>
+<app-button (click)="onSuccess()">Success</app-button>
+
 <h2>Form</h2>
 
-<form [formGroup]="form" novalidate autocomplete="off" (ngSubmit)="onSubmit()">
+<div class="wrapper">
 
-    <app-button type="submit">Submit</app-button>
-    <app-button (click)="onPatchValue()">Patch Value</app-button>
-    <app-button (click)="onToggleInline()">Toggle Inline</app-button>
-    <app-button (click)="onToggleDisable()">Toggle Disable</app-button>
-    <br /><br /><br />
+    <app-spinner *ngIf="showSpinner"></app-spinner>
 
-    <app-form-field label="Input" [required]="true" [control]="form.controls.input" [isInline]="isInline"
-        [patternError]="regexErrors.numbers">
-        <app-input formControlName="input"></app-input>
-    </app-form-field>
+    <form [formGroup]="form" novalidate autocomplete="off" (ngSubmit)="onSubmit()">
 
-    <app-form-field label="Password" [required]="true" [control]="form.controls.password" [isInline]="isInline">
-        <app-password formControlName="password"></app-password>
-    </app-form-field>
+        <app-button type="submit">Submit</app-button>
+        <app-button (click)="onPatchValue()">Patch Value</app-button>
+        <app-button (click)="onToggleInline()">Toggle Inline</app-button>
+        <app-button (click)="onToggleDisable()">Toggle Disable</app-button>
+        <br /><br /><br />
 
-    <app-form-field label="Autocomplete" [required]="true" [control]="form.controls.autocomplete" [isInline]="isInline">
-        <app-autocomplete formControlName="autocomplete" [items]="items"></app-autocomplete>
-    </app-form-field>
+        <app-form-field label="Input" [required]="true" [control]="form.controls.input" [isInline]="isInline"
+            [patternError]="regexErrors.numbers">
+            <app-input formControlName="input"></app-input>
+        </app-form-field>
 
-    <app-form-field label="Select" [required]="true" [control]="form.controls.select" [isInline]="isInline">
-        <app-select formControlName="select" [items]="items"></app-select>
-    </app-form-field>
+        <app-form-field label="Password" [required]="true" [control]="form.controls.password" [isInline]="isInline">
+            <app-password formControlName="password"></app-password>
+        </app-form-field>
 
-    <app-form-field label="Checkboxes" [required]="true" [control]="form.controls.checkboxes" [isInline]="isInline">
-        <app-checkboxes formControlName="checkboxes" [items]="items"></app-checkboxes>
-    </app-form-field>
+        <app-form-field label="Autocomplete" [required]="true" [control]="form.controls.autocomplete"
+            [isInline]="isInline">
+            <app-autocomplete formControlName="autocomplete" [items]="items"></app-autocomplete>
+        </app-form-field>
 
-    <app-form-field label="Radios" [required]="true" [control]="form.controls.radios" [isInline]="isInline">
-        <app-radios formControlName="radios" [items]="items">
-        </app-radios>
-    </app-form-field>
+        <app-form-field label="Select" [required]="true" [control]="form.controls.select" [isInline]="isInline">
+            <app-select formControlName="select" [items]="items"></app-select>
+        </app-form-field>
 
-    <app-form-field label="Date" [required]="true" [control]="form.controls.date" [isInline]="isInline">
-        <app-date formControlName="date" placeholder="Date">
-        </app-date>
-    </app-form-field>
+        <app-form-field label="Checkboxes" [required]="true" [control]="form.controls.checkboxes" [isInline]="isInline">
+            <app-checkboxes formControlName="checkboxes" [items]="items"></app-checkboxes>
+        </app-form-field>
 
-    <app-form-field label="Date Range" [required]="true" [control]="form.controls.dateRange" [isInline]="isInline">
-        <app-date-range formControlName="dateRange">
-        </app-date-range>
-    </app-form-field>
+        <app-form-field label="Radios" [required]="true" [control]="form.controls.radios" [isInline]="isInline">
+            <app-radios formControlName="radios" [items]="items">
+            </app-radios>
+        </app-form-field>
 
-</form>
+        <app-form-field label="Date" [required]="true" [control]="form.controls.date" [isInline]="isInline">
+            <app-date formControlName="date" placeholder="Date">
+            </app-date>
+        </app-form-field>
 
+        <app-form-field label="Date Range" [required]="true" [control]="form.controls.dateRange" [isInline]="isInline">
+            <app-date-range formControlName="dateRange">
+            </app-date-range>
+        </app-form-field>
+
+    </form>
+</div>
 <code>
     {{ form.value | json }}
 </code>
