--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,3 +1,3 @@
-$base-font-family : "Rubik", sans-serif;
+$base-font-family : "Roboto", sans-serif;
 $base-font-size : 16px;
 $base-line-height : 1.2;
